examples/test/testpolicy18384.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18384
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key8: value46
      key15: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value27
      podSelector:
        matchLabels:
          key0: value23
          key2: value44
          key38: value20
